--- a/TODO.txt
+++ b/TODO.txt
@@ -75,6 +75,12 @@ Environmental Defense Fund - Seafood Selector
   http://www.edf.org/about/this-site/copyright
 - probably about the same data as fishwise.org
 
+Green Plus - http://gogreenplus.org/
+B Corporation - http://www.bcorporation.net/
+Who Profits - The Israeli Occupation Industry http://whoprofits.org/
+Behind The Brands - Oxfam http://www.behindthebrands.org/
+Restaurant Opportunity Center - rocunited.org/dinersguide
+
 MIGHT BE STALE:
 
 (Contact the author to find out if it's still up-to-date)
